--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 <script>  
 var a=0,finish;
-finish = "Ingat satu hal, kamu ga sendiri, I'm here to support you, i will be here whatever you need me, you can reply on me okay? Jangan takut untuk berbagi cerita sama aku, jangan takut untuk mengungkapkan semua pikiran negatif kamu, ga usah merasa sungkan ya? I will be 24/7 for you mas ra, ya mungkin tidak akan benar-benar 24/7 hehe, tapi aku bakal mengusahakan sebisaku buat selalu nemenin kamu, karna aku pengen jadi rumah yang nyaman buat kamu. I love you baskaraaa❤️";
+finish = "Ingat satu hal, kamu ga sendiri, I'm here to support you, i will be here whatever you need me, you can reply on me okay? Jangan takut untuk berbagi cerita sama aku, jangan takut untuk mengungkapkan semua pikiran negatif kamu, ga usah merasa sungkan ya? I will be 24/7 for you sayangku, ya mungkin tidak akan benar-benar 24/7 hehe, tapi aku bakal mengusahakan sebisaku buat selalu nemenin kamu, karna aku pengen jadi rumah yang nyaman buat kamu. I love you baskaraaa❤️";
 
         function play() {
           var audio = new Audio('strawbery.mp3');
